Cosmetic changes to SystemJvmOptions